--- a/home.html
+++ b/home.html
@@ -23,5 +23,6 @@
                 <a href="./1/index.html"><img src="./home img/2020-09-14_15-21-39.png.lnk" alt="img" width="400px" height="400px"></a>
             </div>
         </div>
+          <h1>salom</h1>
 </body>
 </html>
